# archived-concrete-settings

./: .coveragerc  .flake8rc  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.rst  CONTRIBUTORS  LICENSE  Makefile  Pipfile  README.rst  notes.org  pyproject.toml  requirements.dev.txt  requirements.test.txt  requirements.txt  setup.py  tox.ini
.hooks/: README  pre-commit  pre-push
concrete_settings/: __init__.py  behavior.py  behaviors.py  concrete_settings.py  core.py  docreader.py  exceptions.py  setting.py  setting_registry.py  settings.py  sources.py  types.py  undefined.py  utils.py  validator.py  validators.py
concrete_settings/behaviors/: __init__.py  behavior.py  override.py  validate.py
concrete_settings/contrib/behaviors/: __init__.py  deprecated.py  deprecated_behavior.py  required.py  required_behavior.py
concrete_settings/contrib/frameworks/: django30.py  django30_template.py  django30_template.yml
concrete_settings/contrib/settings/: uuid.py
concrete_settings/contrib/sources/: __init__.py  envvar_source.py  json_source.py  python_source.py  yaml_source.py
concrete_settings/contrib/validators/: __init__.py  deprecated_validator.py
concrete_settings/sources/: __init__.py  strategies.py
concrete_settings/validators/: __init__.py  required.py  required_validator.py  validator.py  value_type.py
concrete_settings_old/: __init__.py  validators.py
concrete_settings_old/contrib/: __init__.py  django.py
concrete_settings_old/tests/: common.py  test_concrete_settings.py  test_history.py
docs/: Makefile  advanced.rst  api.rst  basic_concepts.rst  conf.py  index.rst  quickstart.rst  requirements.txt  startup.rst
docs/examples/: 0010.py  0020.py  0030.py
docs/src/: advanced.rst  api.rst  basic_concepts.rst  batteries.rst  conf.py  index.rst  startup.rst
docs/src/_static/css/: custom.css
docs/src/ext/: patch_pydomain.py
scripts/: generate_setup.py
src/: concrete_settings.py  test_concrete_settings.py
tests/: conftest.py  t.py  test_behavior.py  test_behaviors.py  test_concrete_settings.py  test_contrib.py  test_contrib_sources.py  test_core.py  test_docreader.py  test_exceptions.py  test_history.py  test_property_setting.py  test_setting_registry.py  test_settings.py  test_source_env.py  test_source_json.py  test_source_python.py  test_source_yaml.py  test_sources.py  test_types.py  test_update.py  utils.py
tests/fixtures/: python_settings.py
tests/test_behaviors/: test_deprecated.py  test_required.py  test_validate.py
tests/test_contrib_settings/: test_uuid_setting.py
tests/test_frameworks/: test_django30.py
tests/test_sources/: test_env_source.py  test_json_source.py  test_python_source.py  test_sources.py  test_yaml_source.py
tools/: django_default_settings_to_concrete.py  module_to_concrete.py
