[tool.poetry]
name = "concrete-settings"
version = "0.0.1"
description = "TODO"

license = "MIT"

authors = [
    "Zaur Nasibov <comments@znasibov.info>"
]

readme = 'README.rst'

repository = "https://github.com/basicwolf/concrete-settings"
homepage = "https://github.com/basicwolf/concrete-settings"

keywords = ['settings', 'configuration']

[tool.poetry.dependencies]
python = "^3.6"
sphinx = "^2.3"
typeguard = "^2.7"
pyyaml = { version = "^5.3", optional = true }

[tool.poetry.dev-dependencies]
django = { version = "^3.0", optional = true }
pudb = "*"
factory_boy = "*"
pytest = "*"
pytest-mock = "*"
pytest-pudb = "*"
tox = "*"
black = "^18.9b0"
flake8 = "*"
flake8-bugbear = "*"
coverage = "*"
pytest-cov = "*"
setuptools = "^41.0"
sphinx = "*"
pyfakefs = "*"
pyyaml = "*"
sphinxcontrib-plantuml = "*"
sphinx-rtd-theme = "*"
safety = "*"
mypy = "^0.761"
twine = "^3.1.1"

[tool.poetry.extras]
pyyaml = ["pyyaml"]
